--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,27 +13,41 @@ jobs:
         name: Login to DockerHub
         command: docker login -u $DOCKERHUB_LOGIN -p$DOCKERHUB_PASS
 
+    # php 7.2
     - run:
-        name: davidsolc/php:7.3-fpm
+        name: vspoint/php:7.2-fpm
         command: |
-          docker image build -t davidsolc/php:7.3-fpm ./php/7.3-fpm
-          docker image push davidsolc/php:7.3-fpm
-    - run:
-        name: davidsolc/php:7.3-fpm-production
-        command: |
-          docker image build -t davidsolc/php:7.3-fpm-production ./php/7.3-fpm-production
-          docker image push davidsolc/php:7.3-fpm-production
+          docker image build -t vspoint/php:7.2-fpm-alpine-production ./php/7.2-fpm-alpine-production
+          docker image push vspoint/php:7.2-fpm-alpine-production
 
+    # php 7.3
     - run:
-        name: davidsolc/php:7.3-fpm-alpine
+        name: vspoint/php:7.3-fpm
         command: |
-          docker image build -t davidsolc/php:7.3-fpm-alpine ./php/7.3-fpm-alpine
-          docker image push davidsolc/php:7.3-fpm-alpine
+          docker image build -t vspoint/php:7.3-fpm ./php/7.3-fpm
+          docker image push vspoint/php:7.3-fpm
     - run:
-        name: davidsolc/php:7.3-fpm-alpine-production
+        name: vspoint/php:7.3-fpm-production
         command: |
-          docker image build -t davidsolc/php:7.3-fpm-alpine-production ./php/7.3-fpm-alpine-production
-          docker image push davidsolc/php:7.3-fpm-alpine-production
+          docker image build -t vspoint/php:7.3-fpm-production ./php/7.3-fpm-production
+          docker image push vspoint/php:7.3-fpm-production
+    - run:
+        name: vspoint/php:7.3-fpm-alpine
+        command: |
+          docker image build -t vspoint/php:7.3-fpm-alpine ./php/7.3-fpm-alpine
+          docker image push vspoint/php:7.3-fpm-alpine
+    - run:
+        name: vspoint/php:7.3-fpm-alpine-production
+        command: |
+          docker image build -t vspoint/php:7.3-fpm-alpine-production ./php/7.3-fpm-alpine-production
+          docker image push vspoint/php:7.3-fpm-alpine-production
+
+    # latest
+    - run:
+        name: vspoint/php:latest
+        command: |
+          docker image build -t vspoint/php:latest ./php/latest
+          docker image push vspoint/php:latest
 
 workflows:
   version: 2
