--- a/php/7.2-fpm-alpine/Dockerfile
+++ b/php/7.2-fpm-alpine/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:7.3-fpm-alpine
+FROM php:7.2-fpm-alpine
 
 RUN apk update \
 	&& apk add --no-cache --allow-untrusted --repository http://dl-cdn.alpinelinux.org/alpine/edge/community/ \
@@ -15,22 +15,23 @@ RUN apk update \
 		postgresql-dev \
 		unzip \
 		zip \
-        mosquitto-dev
+		mosquitto-dev
 
 ENV LD_PRELOAD /usr/lib/preloadable_libiconv.so php
 
 RUN pecl install ds \
 	&& pecl install redis-4.2.0 \
+	&& pecl install xdebug-2.7.0 \
 	&& pecl install Mosquitto-alpha \
 	&& docker-php-ext-enable \
 		ds \
 		redis \
+		xdebug \
 		mosquitto \
 	&& docker-php-ext-install \
 		bcmath \
 		gd \
 		intl \
-		opcache \
 		pdo \
 		pdo_mysql \
 		pdo_pgsql \
@@ -47,6 +48,6 @@ RUN apk del \
 	&& rm -rf /var/cache/apk/* \
 	&& rm -rf /tmp/*
 
-RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
+RUN mv "$PHP_INI_DIR/php.ini-development" "$PHP_INI_DIR/php.ini"
 
 WORKDIR /usr/local/app
