--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,11 @@ jobs:
         command: |
           docker image build -t vspoint/php:7.2-fpm ./php/7.2-fpm
           docker image push vspoint/php:7.2-fpm
+    - run:
+        name: vspoint/php:7.2-fpm-alpine
+        command: |
+          docker image build -t vspoint/php:7.2-fpm-alpine ./php/7.2-fpm-alpine
+          docker image push vspoint/php:7.2-fpm-alpine
 
     # php 7.3
     - run:
