--- a/php/5.6-fpm-alpine/Dockerfile
+++ b/php/5.6-fpm-alpine/Dockerfile
@@ -19,14 +19,10 @@ RUN apk update \
 
 ENV LD_PRELOAD /usr/lib/preloadable_libiconv.so php
 
-RUN pecl install ds \
-	&& pecl install redis-4.2.0 \
-	&& pecl install xdebug-2.7.0 \
+RUN pecl install redis-4.2.0 \
 	&& pecl install Mosquitto-alpha \
 	&& docker-php-ext-enable \
-		ds \
 		redis \
-		xdebug \
 		mosquitto \
 	&& docker-php-ext-install \
 		bcmath \
