--- a/php/7.3-fpm-alpine-production/Dockerfile
+++ b/php/7.3-fpm-alpine-production/Dockerfile
@@ -15,6 +15,7 @@ RUN apk update \
 		postgresql-dev \
 		unzip \
 		zip \
+		gmp-dev \
         mosquitto-dev
 
 ENV LD_PRELOAD /usr/lib/preloadable_libiconv.so php
@@ -35,6 +36,7 @@ RUN pecl install ds \
 		pdo_mysql \
 		pdo_pgsql \
 		pgsql \
+		gmp \
 		zip \
 	&& curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer \
 	&& composer global require "hirak/prestissimo:^0.3"
