add lib memcache

--- a/php/5.6-fpm-alpine/Dockerfile
+++ b/php/5.6-fpm-alpine/Dockerfile
@@ -16,15 +16,20 @@ RUN apk update \
 		unzip \
 		zip \
 		gmp-dev \
+		libmemcached-dev \
 		mosquitto-dev
 
 ENV LD_PRELOAD /usr/lib/preloadable_libiconv.so php
 
 RUN pecl install redis-4.2.0 \
 	&& pecl install Mosquitto-alpha \
+	&& pecl install memcache \
+	&& pecl install memcached-2.2.0 \
 	&& docker-php-ext-enable \
 		redis \
 		mosquitto \
+		memcache \
+		memcached \
 	&& docker-php-ext-install \
 		bcmath \
 		gd \
