--- a/php/5.6-fpm/Dockerfile
+++ b/php/5.6-fpm/Dockerfile
@@ -10,15 +10,20 @@ RUN apt-get update \
 		libicu-dev \
 		libzip-dev \
 		libgmp-dev \
+		libmemcached-dev \
 		libmosquitto-dev \
 	&& ln -s /usr/include/x86_64-linux-gnu/gmp.h /usr/include/gmp.h \
 	&& pecl install redis-4.2.0 \
 	&& pecl install Mosquitto-alpha \
+	&& pecl install memcache \
+	&& pecl install memcached-2.2.0 \
 	&& docker-php-ext-configure \
 		pgsql -with-pgsql=/usr/local/pgsql \
 	&& docker-php-ext-enable \
 		redis \
 		mosquitto \
+		memcache \
+		memcached \
 	&& docker-php-ext-install \
 		bcmath \
 		gd \
