--- a/php/7.3-fpm-production/Dockerfile
+++ b/php/7.3-fpm-production/Dockerfile
@@ -10,17 +10,22 @@ RUN apt-get update \
 		libicu-dev \
 		libzip-dev \
 		libgmp-dev \
+		libmemcached-dev \
 		libmosquitto-dev \
 	&& ln -s /usr/include/x86_64-linux-gnu/gmp.h /usr/include/gmp.h \
 	&& pecl install ds \
 	&& pecl install redis-4.2.0 \
 	&& pecl install Mosquitto-alpha \
+	&& pecl install memcache \
+	&& pecl install memcached \
 	&& docker-php-ext-configure \
 		pgsql -with-pgsql=/usr/local/pgsql \
 	&& docker-php-ext-enable \
 		ds \
 		redis \
 		mosquitto \
+		memcache \
+		memcached \
 	&& docker-php-ext-install \
 		bcmath \
 		gd \
