--- a/php/7.3-fpm-alpine-production/Dockerfile
+++ b/php/7.3-fpm-alpine-production/Dockerfile
@@ -17,6 +17,7 @@ RUN apk update \
 		zip \
 		gmp-dev \
 		libmemcached-dev \
+		rabbitmq-c-dev \
         mosquitto-dev
 
 ENV LD_PRELOAD /usr/lib/preloadable_libiconv.so php
@@ -24,14 +25,16 @@ ENV LD_PRELOAD /usr/lib/preloadable_libiconv.so php
 RUN pecl install ds \
 	&& pecl install redis-4.2.0 \
 	&& pecl install Mosquitto-alpha \
-	&& pecl install memcache \
+#	&& pecl install memcache \
 	&& pecl install memcached \
+	&& pecl install amqp \
 	&& docker-php-ext-enable \
 		ds \
 		redis \
 		mosquitto \
-		memcache \
+#		memcache \
 		memcached \
+		amqp \
 	&& docker-php-ext-install \
 		bcmath \
 		gd \
