--- a/php/7.2-fpm/Dockerfile
+++ b/php/7.2-fpm/Dockerfile
@@ -12,6 +12,7 @@ RUN apt-get update \
 		libgmp-dev \
 		libmemcached-dev \
 		libmosquitto-dev \
+		librabbitmq-dev \
 	&& ln -s /usr/include/x86_64-linux-gnu/gmp.h /usr/include/gmp.h \
 	&& pecl install ds \
 	&& pecl install redis-4.2.0 \
@@ -19,6 +20,7 @@ RUN apt-get update \
 	&& pecl install Mosquitto-alpha \
 	&& pecl install memcache \
 	&& pecl install memcached \
+	&& pecl install amqp \
 	&& docker-php-ext-configure \
 		pgsql -with-pgsql=/usr/local/pgsql \
 	&& docker-php-ext-enable \
@@ -28,6 +30,7 @@ RUN apt-get update \
 		mosquitto \
 		memcache \
 		memcached \
+		amqp \
 	&& docker-php-ext-install \
 		bcmath \
 		gd \
