--- a/php/5.6-fpm/Dockerfile
+++ b/php/5.6-fpm/Dockerfile
@@ -12,11 +12,13 @@ RUN apt-get update \
 		libgmp-dev \
 		libmemcached-dev \
 		libmosquitto-dev \
+		librabbitmq-dev \
 	&& ln -s /usr/include/x86_64-linux-gnu/gmp.h /usr/include/gmp.h \
 	&& pecl install redis-4.2.0 \
 	&& pecl install Mosquitto-alpha \
 	&& pecl install memcache \
 	&& pecl install memcached-2.2.0 \
+	&& pecl install amqp \
 	&& docker-php-ext-configure \
 		pgsql -with-pgsql=/usr/local/pgsql \
 	&& docker-php-ext-enable \
@@ -24,6 +26,7 @@ RUN apt-get update \
 		mosquitto \
 		memcache \
 		memcached \
+		amqp \
 	&& docker-php-ext-install \
 		bcmath \
 		gd \
