--- a/php/5.6-fpm-alpine/Dockerfile
+++ b/php/5.6-fpm-alpine/Dockerfile
@@ -20,15 +20,29 @@ RUN apk update \
 		rabbitmq-c-dev \
 		libssh2 \
 		libssh2-dev \
-		mosquitto-dev
+		mosquitto-dev \
+		perl-image-exiftool \
+        	jpeg-dev \
+        	freetype \
+        	freetype-dev \
+       	libjpeg-turbo-dev \
+       	libwebp \
+       	libwebp-dev
 
 ENV LD_PRELOAD /usr/lib/preloadable_libiconv.so php
 
+RUN docker-php-ext-configure gd \
+        --with-freetype-dir=/usr/lib/ \
+        --with-png-dir=/usr/lib/ \
+        --with-jpeg-dir=/usr/lib/ \
+        --with-webp-dir=/usr/lib/ \
+        --with-gd
+        
 RUN pecl install redis-4.2.0 \
-	&& pecl install Mosquitto-alpha \
+	&& pecl install Mosquitto-0.4.0 \
 	&& pecl install memcache-2.2.7 \
 	&& pecl install memcached-2.2.0 \
-	&& pecl install amqp \
+	&& pecl install amqp-1.10.2 \
 	&& pecl install ssh2-0.13 \
 	&& echo "extension=ssh2.so" >> /usr/local/etc/php/conf.d/docker-php-ext-ssh2.ini \
 	&& docker-php-ext-enable \
@@ -49,7 +63,7 @@ RUN pecl install redis-4.2.0 \
 		gmp \
 		zip \
 	&& curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer \
-	&& composer global require "hirak/prestissimo:^0.3"
+	&& composer self-update --snapshot
 
 RUN apk del \
 		autoconf \
