--- a/php/7.3-fpm-alpine/Dockerfile
+++ b/php/7.3-fpm-alpine/Dockerfile
@@ -1,12 +1,12 @@
 FROM php:7.3-fpm-alpine
 
 RUN apk update \
-	&& apk add --no-cache --allow-untrusted --repository http://dl-cdn.alpinelinux.org/alpine/edge/community/ \
+	&& apk add --no-cache --allow-untrusted --repository http://dl-cdn.alpinelinux.org/alpine/v3.12/community/ \
 		autoconf \
 		curl \
 		g++ \
 		git \
-		gnu-libiconv \
+		gnu-libiconv=1.15-r2 \
 		icu-dev \
 		libpng-dev \
 		libtool \
