--- a/php/7.3-fpm-alpine/Dockerfile
+++ b/php/7.3-fpm-alpine/Dockerfile
@@ -1,12 +1,12 @@
 FROM php:7.3-fpm-alpine
 
 RUN apk update \
-	&& apk add --no-cache --allow-untrusted --repository http://dl-cdn.alpinelinux.org/alpine/v3.12/community/ \
+	&& apk add --no-cache --allow-untrusted --repository http://dl-cdn.alpinelinux.org/alpine/v3.14/community/ \
 		autoconf \
 		curl \
 		g++ \
 		git \
-		gnu-libiconv=1.15-r2 \
+		gnu-libiconv \
 		icu-dev \
 		libpng-dev \
 		libtool \
@@ -39,7 +39,7 @@ RUN docker-php-ext-configure gd \
         --with-webp-dir=/usr/lib/ \
         --with-gd
 
-RUN pecl install ds \
+RUN pecl install ds-1.3.0 \
 	&& pecl install redis-5.3.2 \
 	&& pecl install xdebug-2.7.0 \
 	&& pecl install Mosquitto-0.4.0 \
